<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/photos_map"
    android:icon="@drawable/ic_map"
    android:visible="false"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/photos_filter"
    android:icon="@drawable/ic_filter"
    android:title="@string/sort"
    android:visible="false"
    app:showAsAction="ifRoom">

    <menu>
      <item
        android:id="@+id/by_date_desc"
        android:title="@string/sort_by_newest_first" />

      <item
        android:id="@+id/by_date_asc"
        android:title="@string/sort_by_oldest_first" />

      <item
        android:id="@+id/by_visit"
        android:title="@string/sort_by_visit" />
    </menu>
  </item>

  <item
    android:id="@+id/visits_filter"
    android:icon="@drawable/ic_filter"
    android:title="@string/sort"
    android:visible="false"
    app:showAsAction="ifRoom">

    <menu>
      <item
        android:id="@+id/visits_desc"
        android:title="@string/sort_by_newest_first" />

      <item
        android:id="@+id/visits_asc"
        android:title="@string/sort_by_oldest_first" />
    </menu>
  </item>

  <item
    android:id="@+id/navigation_settings"
    android:icon="@drawable/ic_settings"
    android:title="@string/settings"
    app:showAsAction="always" />
</menu>
