<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/activity_horizontal_margin">

  <ImageView
    android:id="@+id/about_logo"
    android:layout_width="match_parent"
    android:layout_height="@dimen/logo_height"
    android:contentDescription="@string/photour_vertical_logo"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_logo_vertical" />

  <TextView
    android:id="@+id/developed_by"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="36dp"
    android:text="@string/developed_by"
    android:textAlignment="center"
    android:textColor="@color/colorSubtitleGray"
    android:textSize="@dimen/min_text_size"
    app:layout_constraintTop_toBottomOf="@id/about_logo" />

  <TextView
    android:id="@+id/jia_hua"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:text="@string/jia_hua"
    android:textAlignment="center"
    android:textColor="@color/colorTitleGray"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/developed_by" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:text="@string/zer_jun"
    android:textAlignment="center"
    android:textColor="@color/colorTitleGray"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@id/jia_hua" />

</androidx.constraintlayout.widget.ConstraintLayout>


